--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -6,32 +7,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,400&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <style>
         :root {
-
             --fuchsia: #D82D7E;
             --coral: #FF7F50;
             --amber: #FFB347;
             --gold-light: #f4e4bc;
         }
 
-        /* Optimisation Mobile : Empêcher le scroll et gérer la hauteur réelle */
         * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
         
         body {
             background-color: #0a0a0a;
             color: var(--gold-light);
             font-family: 'Montserrat', sans-serif;
-            height: 100vh; /* Repli pour navigateurs anciens */
-            height: 100dvh; /* Hauteur dynamique pour mobiles (ignore barres URL) */
+            height: 100dvh;
             overflow: hidden;
             display: flex;
             justify-content: center;
-@@ -31,108 +32,114 @@
+            align-items: center;
+            text-align: center;
+        }
+
         .bg-image {
             position: absolute;
             top: 0; left: 0; width: 100%; height: 100%;
-            /* Ajustement background pour mobile : focus haut 10% */
             background: url('bisous.JPG') no-repeat center 10%/cover;
-            filter: brightness(0.3) blur(4px);
+            filter: brightness(0.3) blur(6px);
             z-index: -1;
             transform: scale(1.1);
             animation: zoomSlow 20s infinite alternate;
@@ -47,126 +47,128 @@
 
         h1 {
             font-family: 'Cormorant Garamond', serif;
-            font-size: clamp(2.2rem, 10vw, 4.5rem);
+            font-size: clamp(2rem, 9vw, 3.5rem);
             font-weight: 300;
-            letter-spacing: 3px;
-            margin-bottom: 15px;
+            letter-spacing: 4px;
+            margin-bottom: 10px;
             text-transform: uppercase;
-
             color: var(--fuchsia);
-            line-height: 1.1;
         }
 
-        /* Compte à rebours optimisé pour petits écrans */
+        /* Timer avec Carrés */
         .countdown-container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-            max-width: 400px;
-            margin: 40px auto;
+            display: flex;
+            justify-content: center;
+            gap: 12px;
+            margin: 25px 0 40px 0;
         }
 
         .unit {
             display: flex;
             flex-direction: column;
-            background: rgba(255, 255, 255, 0.05);
-            padding: 10px 5px;
-            border-radius: 8px;
+            justify-content: center;
+            align-items: center;
+            width: 65px; /* Format carré */
+            height: 65px; /* Format carré */
+            background: rgba(255, 255, 255, 0.05); /* Fond subtil */
+            border: 1px solid rgba(244, 228, 188, 0.2); /* Bordure fine */
             backdrop-filter: blur(5px);
-            border: 1px solid rgba(244, 228, 188, 0.1);
+            border-radius: 4px; /* Carré avec angles très légèrement adoucis */
         }
 
         .num {
             font-family: 'Cormorant Garamond', serif;
-            font-size: clamp(1.5rem, 6vw, 2.2rem);
+            font-size: 1.6rem;
             font-weight: 600;
-
-
             color: var(--coral);
+            line-height: 1;
         }
 
         .label {
-            font-size: 0.55rem;
+            font-size: 0.5rem;
             text-transform: uppercase;
             letter-spacing: 1px;
-            opacity: 0.8;
-            margin-top: 5px;
+            opacity: 0.7;
+            margin-top: 4px;
         }
 
         .date {
-            font-size: 1rem;
+            font-size: 0.9rem;
             letter-spacing: 4px;
-
-            border-top: 1px solid var(--amber);
-            border-bottom: 1px solid var(--amber);
+            border-top: 1px solid rgba(255, 179, 71, 0.3);
+            border-bottom: 1px solid rgba(255, 179, 71, 0.3);
             display: inline-block;
-            padding: 8px 25px;
-            margin-bottom: 40px;
-
+            padding: 6px 15px;
+            margin-bottom: 30px;
         }
 
-        /* Bouton format tel : Largeur confortable pour le pouce */
         .enter-btn {
-            display: block;
-            width: fit-content;
-            margin: 0 auto;
+            display: inline-block;
             text-decoration: none;
             color: #0a0a0a;
-
             background: linear-gradient(45deg, var(--fuchsia), var(--coral));
-            padding: 18px 40px;
+            padding: 14px 0;
+            width: 200px;
             font-family: 'Cormorant Garamond', serif;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             text-transform: uppercase;
             letter-spacing: 2px;
-
             font-weight: 600;
-            border-radius: 2px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border-radius: 50px;
+            transition: transform 0.3s ease;
         }
 
-        .enter-btn:active {
-            transform: scale(0.95);
+        .enter-btn:active { transform: scale(0.95); }
 
-
-
-        }
-
-        @keyframes zoomSlow { from { transform: scale(1.1); } to { transform: scale(1.25); } }
+        @keyframes zoomSlow { from { transform: scale(1.1); } to { transform: scale(1.2); } }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-
-        /* Ajustements spécifiques aux très petits téléphones */
-        @media (max-width: 360px) {
-            .countdown-container { gap: 5px; }
-            .unit { padding: 8px 2px; }
-            h1 { font-size: 1.8rem; }
+        
+        @media (max-width: 370px) {
+            .unit { width: 55px; height: 55px; }
+            .num { font-size: 1.3rem; }
         }
     </style>
 </head>
 <body>
 <div class="bg-image"></div>
 <div class="intro-container">
-    <p style="letter-spacing: 3px; font-size: 0.75rem; margin-bottom: 20px; color: var(--amber);">VOUS ÊTES INVITÉS AU MARIAGE DE </p>
+    <p style="letter-spacing: 3px; font-size: 0.7rem; margin-bottom: 15px; opacity: 0.8; color: var(--amber);">VOUS ÊTES INVITÉS</p>
     <h1>Karen & Yossef</h1>
 
     <div class="countdown-container" id="timer">
-@@ -148,6 +155,7 @@ <h1>Karen & Yossef</h1>
+        <div class="unit"><span class="num" id="days">00</span><span class="label">Jours</span></div>
+        <div class="unit"><span class="num" id="hours">00</span><span class="label">Heures</span></div>
+        <div class="unit"><span class="num" id="mins">00</span><span class="label">Min</span></div>
+        <div class="unit"><span class="num" id="secs">00</span><span class="label">Sec</span></div>
+    </div>
+
+    <p class="date">09 . 06 . 2026</p>
+    <br>
+    <a href="invitation.html" class="enter-btn">Découvrir</a>
 </div>
 
 <script>
-    // Date cible
     const targetDate = new Date("June 9, 2026 13:30:00").getTime();
 
     function updateCountdown() {
-@@ -165,12 +173,13 @@ <h1>Karen & Yossef</h1>
+        const now = new Date().getTime();
+        const difference = targetDate - now;
+
+        if (difference > 0) {
+            const d = Math.floor(difference / (1000 * 60 * 60 * 24));
+            const h = Math.floor((difference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const m = Math.floor((difference % (1000 * 60 * 60)) / (1000 * 60));
+            const s = Math.floor((difference % (1000 * 60)) / 1000);
+
+            document.getElementById("days").innerText = d < 10 ? "0" + d : d;
+            document.getElementById("hours").innerText = h < 10 ? "0" + h : h;
             document.getElementById("mins").innerText = m < 10 ? "0" + m : m;
             document.getElementById("secs").innerText = s < 10 ? "0" + s : s;
         } else {
-            document.getElementById("timer").innerHTML = "<h3 style='grid-column: 1/-1; color:var(--fuchsia)'>C'est le grand jour !</h3>";
+            document.getElementById("timer").innerHTML = "<h3>C'est le grand jour !</h3>";
         }
     }
 
-    // Intervalle de mise à jour 1s
     setInterval(updateCountdown, 1000);
     updateCountdown();
 </script>
