--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        
+
         body {
             background-color: #0a0a0a;
             color: var(--gold-light);
@@ -27,19 +27,28 @@
             text-align: center;
         }
 
+
         .bg-image {
             position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: url('bisous.JPG') no-repeat center 10%/cover;
-            filter: brightness(0.3) blur(6px);
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            /* On utilise une image très large (180%) pour pouvoir la décaler */
+            /* 0% horizontalement = bord gauche de la photo collé à gauche */
+            background: url('bisous.JPG') no-repeat -120% 30%;
+            background-size: auto 250%;
+            filter: brightness(0.5) blur(4px);
             z-index: -1;
+            /* On garde l'animation de zoom léger */
             transform: scale(1.1);
             animation: zoomSlow 20s infinite alternate;
         }
 
-        .intro-container { 
-            z-index: 1; 
-            opacity: 0; 
+
+        .intro-container {
+            z-index: 1;
+            opacity: 0;
             animation: fadeIn 2s ease-out forwards 0.5s;
             width: 100%;
             padding: 0 20px;
@@ -53,9 +62,9 @@
             margin-bottom: 10px;
             text-transform: uppercase;
             color: var(--fuchsia);
+            text-shadow: 0 2px 10px rgba(0,0,0,0.5);
         }
 
-        /* Timer avec Carrés */
         .countdown-container {
             display: flex;
             justify-content: center;
@@ -68,12 +77,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 65px; /* Format carré */
-            height: 65px; /* Format carré */
-            background: rgba(255, 255, 255, 0.05); /* Fond subtil */
-            border: 1px solid rgba(244, 228, 188, 0.2); /* Bordure fine */
+            width: 65px;
+            height: 65px;
+            background: rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(244, 228, 188, 0.2);
             backdrop-filter: blur(5px);
-            border-radius: 4px; /* Carré avec angles très légèrement adoucis */
+            border-radius: 4px;
         }
 
         .num {
@@ -100,6 +109,7 @@
             display: inline-block;
             padding: 6px 15px;
             margin-bottom: 30px;
+            background: rgba(0, 0, 0, 0.2);
         }
 
         .enter-btn {
@@ -116,13 +126,14 @@
             font-weight: 600;
             border-radius: 50px;
             transition: transform 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
         }
 
         .enter-btn:active { transform: scale(0.95); }
 
         @keyframes zoomSlow { from { transform: scale(1.1); } to { transform: scale(1.2); } }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-        
+
         @media (max-width: 370px) {
             .unit { width: 55px; height: 55px; }
             .num { font-size: 1.3rem; }
@@ -148,7 +159,7 @@
 </div>
 
 <script>
-    const targetDate = new Date("June 9, 2026 13:30:00").getTime();
+    const targetDate = new Date("June 14, 2026 13:30:00").getTime();
 
     function updateCountdown() {
         const now = new Date().getTime();
