--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             color: var(--gold-light);
             font-family: 'Montserrat', sans-serif;
             height: 100dvh;
+            width: 100vw;
             overflow: hidden;
             display: flex;
             justify-content: center;
@@ -27,25 +28,24 @@
             text-align: center;
         }
 
-
+        /* --- CONFIGURATION DE L'IMAGE DE FOND --- */
         .bg-image {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            /* On utilise une image très large (180%) pour pouvoir la décaler */
-            /* 0% horizontalement = bord gauche de la photo collé à gauche */
-            background: url('bisous.JPG') no-repeat -120% 30%;
-            background-size: auto 250%;
-            filter: brightness(0.5) blur(4px);
             z-index: -1;
-            /* On garde l'animation de zoom léger */
+            filter: brightness(0.5) blur(4px);
+            /* Zoom fluide */
             transform: scale(1.1);
             animation: zoomSlow 20s infinite alternate;
+
+            /* CENTRAGE PAR DÉFAUT (PC & MOBILE) */
+            background: url('bisous.JPG') no-repeat center 35% / cover;
         }
 
-
+        /* --- CONTENU --- */
         .intro-container {
             z-index: 1;
             opacity: 0;
@@ -79,7 +79,7 @@
             align-items: center;
             width: 65px;
             height: 65px;
-            background: rgba(0, 0, 0, 0.3);
+            background: rgba(0, 0, 0, 0.4);
             border: 1px solid rgba(244, 228, 188, 0.2);
             backdrop-filter: blur(5px);
             border-radius: 4px;
@@ -97,7 +97,7 @@
             font-size: 0.5rem;
             text-transform: uppercase;
             letter-spacing: 1px;
-            opacity: 0.7;
+            opacity: 0.8;
             margin-top: 4px;
         }
 
@@ -125,23 +125,35 @@
             letter-spacing: 2px;
             font-weight: 600;
             border-radius: 50px;
-            transition: transform 0.3s ease;
+            transition: all 0.3s ease;
             box-shadow: 0 4px 15px rgba(0,0,0,0.3);
         }
 
         .enter-btn:active { transform: scale(0.95); }
 
-        @keyframes zoomSlow { from { transform: scale(1.1); } to { transform: scale(1.2); } }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+        /* --- ANIMATIONS --- */
+        @keyframes zoomSlow {
+            from { transform: scale(1.1); }
+            to { transform: scale(1.25); }
+        }
 
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        /* AJUSTEMENT PETITS MOBILES */
         @media (max-width: 370px) {
             .unit { width: 55px; height: 55px; }
             .num { font-size: 1.3rem; }
+            h1 { font-size: 1.8rem; }
         }
     </style>
 </head>
 <body>
+
 <div class="bg-image"></div>
+
 <div class="intro-container">
     <p style="letter-spacing: 3px; font-size: 0.7rem; margin-bottom: 15px; opacity: 0.8; color: var(--amber);">VOUS ÊTES INVITÉS</p>
     <h1>Karen & Yossef</h1>
@@ -176,12 +188,13 @@
             document.getElementById("mins").innerText = m < 10 ? "0" + m : m;
             document.getElementById("secs").innerText = s < 10 ? "0" + s : s;
         } else {
-            document.getElementById("timer").innerHTML = "<h3>C'est le grand jour !</h3>";
+            document.getElementById("timer").innerHTML = "<h3 style='color:var(--coral)'>C'est le grand jour !</h3>";
         }
     }
 
     setInterval(updateCountdown, 1000);
     updateCountdown();
 </script>
+
 </body>
 </html>
