--- a/index.html
+++ b/index.html
@@ -37,12 +37,22 @@
             height: 100%;
             z-index: -1;
             filter: brightness(0.5) blur(4px);
-            /* Zoom fluide */
-            transform: scale(1.1);
+            
+            /* Animation de zoom */
             animation: zoomSlow 20s infinite alternate;
 
-            /* CENTRAGE PAR DÉFAUT (PC & MOBILE) */
+            /* PAR DÉFAUT (Ordinateur) : Centré */
             background: url('bisous.JPG') no-repeat center 35% / cover;
+        }
+
+        /* --- AJUSTEMENT POUR TOUS LES TÉLÉPHONES --- */
+        @media (max-width: 768px) {
+            .bg-image {
+                /* Décale l'image de 20% vers la gauche */
+                background-position: 20% 35%;
+                /* On augmente le scale pour s'assurer que l'image couvre tout l'écran malgré le décalage */
+                transform: scale(1.3);
+            }
         }
 
         /* --- CONTENU --- */
@@ -134,7 +144,7 @@
         /* --- ANIMATIONS --- */
         @keyframes zoomSlow {
             from { transform: scale(1.1); }
-            to { transform: scale(1.25); }
+            to { transform: scale(1.3); }
         }
 
         @keyframes fadeIn {
@@ -142,7 +152,6 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
-        /* AJUSTEMENT PETITS MOBILES */
         @media (max-width: 370px) {
             .unit { width: 55px; height: 55px; }
             .num { font-size: 1.3rem; }
