--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             z-index: -1;
             filter: brightness(0.5) blur(4px);
             
-            /* Animation de zoom */
+            /* Animation de zoom continue */
             animation: zoomSlow 20s infinite alternate;
 
             /* PAR DÉFAUT (Ordinateur) : Centré */
@@ -48,10 +48,10 @@
         /* --- AJUSTEMENT POUR TOUS LES TÉLÉPHONES --- */
         @media (max-width: 768px) {
             .bg-image {
-                /* Décale l'image de 20% vers la gauche */
-                background-position: 20% 35%;
-                /* On augmente le scale pour s'assurer que l'image couvre tout l'écran malgré le décalage */
-                transform: scale(1.3);
+                /* On décale encore plus (5% = presque le bord gauche de la photo) */
+                background-position: 5% 35%;
+                /* On augmente le zoom à 1.6 pour un effet plus rapproché */
+                transform: scale(1.6);
             }
         }
 
@@ -144,7 +144,7 @@
         /* --- ANIMATIONS --- */
         @keyframes zoomSlow {
             from { transform: scale(1.1); }
-            to { transform: scale(1.3); }
+            to { transform: scale(1.4); } /* Animation de zoom sur ordi */
         }
 
         @keyframes fadeIn {
