Update invitation text in index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <div class="bg-image"></div>
 
 <div class="intro-container">
-    <p style="letter-spacing: 4px; font-size: 0.75rem; margin-bottom: 15px; color: var(--amber); font-weight: 400;">VOUS ÊTES INVITÉS</p>
+    <p style="letter-spacing: 4px; font-size: 0.75rem; margin-bottom: 15px; color: var(--amber); font-weight: 400;">VOUS ÊTES INVITÉS AU MARIAGE DE :</p>
     <h1>Karen & Yossef</h1>
 
     <div class="countdown-container" id="timer">
